refactor: improve classpath email template rendering
Co-authored-by: joralm <11278922+joralm@users.noreply.github.com>